# EventManager

./: .drone.yml  CMakeLists.txt  README.md
cmake/Modules/: compdb.cmake
include/EventManager/: Event.hpp  Manager.hpp  Participant.hpp
src/EventManager/: Event.cpp  Manager.cpp  Participant.cpp
tests/: test_basic.cpp  test_event.cpp
